--- a/public/style.css
+++ b/public/style.css
@@ -390,6 +390,32 @@ body {
 .comment-position-top a{
     padding-left: 0px !important
 }
+.password_show{
+    position: absolute;
+    right: 20px;
+    bottom: 14px;
+    background-color: #008080;
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
