--- a/public/style.css
+++ b/public/style.css
@@ -399,6 +399,10 @@ body {
     font-weight: bold;
     border: none;
 }
+.btn-liked{
+    background-color: #d32a2a !important;
+    color: white !important;
+}
 
 
 
