--- a/public/style.css
+++ b/public/style.css
@@ -418,11 +418,12 @@ body {
     color: white !important;
 }
 .card-img-top img{
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
 }
 .card-img-top{
-    height: 300px !important;
+    height: 200px !important;
     overflow: hidden;
 }
 .card-img-top img:hover{
