--- a/public/style.css
+++ b/public/style.css
@@ -560,8 +560,14 @@ body {
     background-color: unset;
     padding: 0px !important;
 }
-
-
+.popup-content{
+    border-radius: 10px !important;
+    border: none !important;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1) !important;
+}
+.link-red:hover{
+    color: #df1379 !important;
+}
 
 
 
