--- a/public/style.css
+++ b/public/style.css
@@ -568,8 +568,24 @@ body {
 .link-red:hover{
     color: #df1379 !important;
 }
-
-
+.btn-slide-home{
+    background-color: transparent;
+    border:solid 2px #008080;
+    color: #008080;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+}
+.btn-slide-home:hover{
+    background-color: #008080;
+    color: white;
+}
+.group-btn-slide{
+    width: 100%;
+    position: absolute !important;
+    padding: 5px;
+    top: 50%;
+}
 
 
 
