--- a/public/style.css
+++ b/public/style.css
@@ -669,7 +669,12 @@ body {
     background: url("/icons/color-wheel.png")no-repeat;
     background-size: cover;
 }
+.custom-scrollbar-left {
+    height: 400px;
+    overflow-y: auto; /* Activer la barre de défilement verticale si nécessaire */
+    overflow-x: hidden; /* Cacher la barre de défilement horizontale */
 
+}
 
 
 
