--- a/public/style.css
+++ b/public/style.css
@@ -445,7 +445,7 @@ body {
 }
 
 .badge-like-post-count {
-    background-color: #cccccc65;
+    background-color: #033f3f;
     border: solid 1px #008080;
     color: white !important;
 }
