--- a/public/style.css
+++ b/public/style.css
@@ -445,8 +445,7 @@ body {
 }
 
 .badge-like-post-count {
-    background-color: #033f3f;
-    border: solid 1px #008080;
+    background-color:#018d8d;
     color: white !important;
 }
 
