--- a/public/style.css
+++ b/public/style.css
@@ -965,13 +965,123 @@ body {
 
 
 
-
-
-
-
-
-
+.div-scroll-publier{
+    position: absolute;
+    margin-left:880px;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 100px;
+}
 .container-search {
+    position: absolute;
+    margin-right: 50px;
+    margin-left: 285px;
+    margin-bottom: 20px;
+    margin-top: -10px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 100px;
+
+    .search-search {
+        position: absolute;
+        margin: auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 35px;
+        height: 35px;
+        color: white !important;
+        background: #008080;
+        border: none !important;
+        border-radius: 50%;
+        transition: all 1s;
+        z-index: 4;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+
+    }
+
+    input {
+        font-family: 'Inconsolata', monospace;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 40px;
+        height: 40px;
+        outline: none;
+        border: none;
+        background: #a5a5a5;
+        color: white;
+        text-shadow: 0 0 10px #a5a5a5;
+        padding: 0 80px 0 20px;
+        border-radius: 30px;
+        transition: all 1s;
+        opacity: 0;
+        z-index: 5;
+        font-weight: bolder;
+        letter-spacing: 0.1em;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        &:focus {
+            width: 200px;
+            opacity: 1;
+            cursor: text;
+        }
+
+        &:focus~.search-search {
+            right: -250px;
+            background: #a5a5a5;
+            z-index: 6;
+
+            &::before {
+                top: 0;
+                left: 0;
+                width: 25px;
+            }
+
+            &::after {
+                top: 0;
+                left: 0;
+                width: 25px;
+                height: 2px;
+                border: none;
+                background: white;
+                border-radius: 0%;
+                transform: rotate(-45deg);
+            }
+        }
+
+        &::placeholder {
+            color: white;
+            opacity: 0.5;
+            font-weight: bolder;
+        }
+    }
+}
+
+
+
+
+
+/* .container-search {
     position: absolute;
     margin: auto;
     top: 0;
@@ -1068,7 +1178,7 @@ body {
             font-weight: bolder;
         }
     }
-}
+} */
 
 .card-image-shop-categorie{
     height: 120px;
