--- a/public/style.css
+++ b/public/style.css
@@ -1298,3 +1298,6 @@ tbody td {
 
 
 
+@media (max-width: 900px) { /* Adjust max-width as needed */
+    * { max-width: 100% !important; height: auto !important; overflow: 100% !important; }
+  }
