--- a/public/style.css
+++ b/public/style.css
@@ -440,7 +440,7 @@ body {
     position: absolute;
     right: 20px;
     bottom: 14px;
-    background-color: #008080;
+    background-color: rgba(255, 255, 255, 0);
     color: white;
     font-weight: bold;
     border: none;
