--- a/public/style.css
+++ b/public/style.css
@@ -1336,8 +1336,12 @@ tbody td {
 }
 
 .badge-discount {
-    background-color: #008080;
-    color: #fff;
+    /* background-color: #008080;
+    color: #fff; */
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    color: #008080 !important;
+
 }
 
 
