--- a/public/style.css
+++ b/public/style.css
@@ -408,13 +408,12 @@ body {
 
 /* .option-icon-header {
     right: 0px;
-
     text-transform: capitalize;
-}
-
-.option-icon-header:hover {
-    color: #008080 !important;
 } */
+
+/* .option-icon-header:hover {
+    color: #008080 !important;
+}  */
 
 
 .elementToHideBeforeScroll {
@@ -1819,3 +1818,8 @@ ul.nav-dropdown-xxx {
     color: #008080;
 }
 
+.underlined-link {
+    font-weight:500;
+    text-decoration: underline;
+    color: #008080;
+}
